crates/cuda-macros/tests/compile_fail/cuda_module_include_kernel_boundary.stderr
error[E0599]: no method named `from_include` found for reference `&LoadedModule` in the current scope
  --> tests/compile_fail/cuda_module_include_kernel_boundary.rs:22:20
   |
22 |     let _ = module.from_include(stream, config, 1u32);
   |                    ^^^^^^^^^^^^ method not found in `&LoadedModule`
